python/src/rabbit/manifests/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app:  rabbitmq
  type: ClusterIP 
  ports:
  - name:  http
    protocol:  TCP
    port:  15672
    targetPort:  15672
  - name:  ampq
    protocol:  TCP
    port:  5672
    targetPort:  5672


# need to access ports from outside the cluster so we need ingress to route the traffic to the service
